# TRADE

./: Cargo.toml  Makefile  README.md  package-lock.json  pyproject.toml  schur.rs  works.html
3d-app-components/: 20-40-60-structural-boxes.py  FVG-detector.py  magnet-potential.py  point-cloud.py  z-axis.py
3d-app-components/3d/: pca-reduced-space.py  price-manifold-liquidity-potencial.py  real-time-system-health.py  surface-plot.py
3d-app-components/OBNFE-kill-switch/: Bayesian-belief-fusion-engine.py  reset-score.py  unified-severity-score.py
3d-app-components/causal-lead-vectors/: dxy-spx-cross-correlation.py  ict-killzones.py  light-cone-violations.py
3d-app-components/geometry-state-space/: kernel-density.py  persistent-homology.py
3d-app-components/layers/: layer1-jax.py  layer1.js  layer1.py  layer2-jax.py  layer2.js  layer2.py  layer3-jax.py  layer3.js  layer3.py  layer4-jax.py  layer4.js  layer4.py  layer5-jax.py  layer5.py  orchestrator.py
3d-app-components/liquidity-field/: imbalance-FVG.py  liquidity_field.py  wick-patterns.py
3d-app-components/strategies/: luxAlgo.py
ALL-SIGNS/: edge-flip_reverse-period_detector.py
ASYNCRONIC-SYSTEM-rs/: Cargo.toml
ASYNCRONIC-SYSTEM-rs/src/: config.rs  lib.rs  main.rs  types.rs
ASYNCRONIC-SYSTEM-rs/src/analisys/: phase.rs
ASYNCRONIC-SYSTEM-rs/src/core/: indicators.rs  kill_zone.rs  state.rs
ASYNCRONIC-SYSTEM-rs/src/pipeline/: aecabi.rs  ipda.rs  urol.rs
CLD/system-architectures/: adelic_koopman_main.py  causal_transmition.py  orchestrator.py  sos27xSent.py  table.csv
IPDA/: readme.md
MCP-SERVERS/: ipda-mcp.py  metatrader5-mcp.py
data/: data-pull.py
data-hist/: encoder.py
data-hist/output/: annotated_candles.csv  pattern_sequence.txt  summary.txt  training_data.csv
deployment/docker/: Dockerfile
docs/: USER_MANUAL.md  architecture.md  qsh-42.md  th.md  theory.md
docs/system-architectures/: adelic_koopman_core.py
eur-usd-dataset/: EUR-USD_Minute_2025-12-05_UTC.csv  EUR-USD_Minute_2025-12-08_UTC.csv  EUR-USD_Minute_2025-12-09_UTC.csv  EUR-USD_Minute_2025-12-10_UTC.csv  EUR-USD_Minute_2025-12-11_UTC.csv  EUR-USD_Minute_2025-12-12_UTC.csv  EUR-USD_Minute_2025-12-15_UTC.csv  EUR-USD_Minute_2025-12-16_UTC.csv  EUR-USD_Minute_2025-12-17_UTC.csv  EUR-USD_Minute_2025-12-18_UTC.csv  EUR-USD_Minute_2025-12-19_UTC.csv  EUR-USD_Minute_2025-12-22_UTC.csv  EUR-USD_Minute_2025-12-23_UTC.csv  EUR-USD_Minute_2025-12-24_UTC.csv  EUR-USD_Minute_2025-12-25_UTC.csv  EUR-USD_Minute_2025-12-26_UTC.csv  EUR-USD_Minute_2025-12-29_UTC.csv  EUR-USD_Minute_2025-12-30_UTC.csv  EUR-USD_Minute_2025-12-31_UTC.csv  EUR-USD_Minute_2026-01-01_UTC.csv  EUR-USD_Minute_2026-01-02_UTC.csv  EUR-USD_Minute_2026-01-05_UTC.csv  EUR-USD_Minute_2026-01-06_UTC.csv  EUR-USD_Minute_2026-01-07_UTC.csv  EUR-USD_Minute_2026-01-08_UTC.csv  EUR-USD_Minute_2026-01-09_UTC.csv  EUR-USD_Minute_2026-01-12_UTC.csv  EUR-USD_Minute_2026-01-13_UTC.csv  EUR-USD_Minute_2026-01-14_UTC.csv  EUR-USD_Minute_2026-01-15_UTC.csv  EUR-USD_Minute_2026-01-16_UTC.csv  EUR-USD_Minute_2026-01-19_UTC.csv  EUR-USD_Minute_2026-01-20_UTC.csv  EUR-USD_Minute_2026-01-21_UTC.csv  EUR-USD_Minute_2026-01-22_UTC.csv  EUR-USD_Minute_2026-01-23_UTC.csv  EUR-USD_Minute_2026-01-26_UTC.csv  EUR-USD_Minute_2026-01-27_UTC.csv  EUR-USD_Minute_2026-01-28_UTC.csv  EUR-USD_Minute_2026-01-29_UTC.csv  (+39 more)
eur-usd-dataset-ask/: EUR-USD_Minute_2026-03-30_UTC.csv  EUR-USD_Minute_2026-03-31_UTC.csv  EUR-USD_Minute_2026-04-01_UTC.csv  EUR-USD_Minute_2026-04-02_UTC.csv  EUR-USD_Minute_2026-04-03_UTC.csv  EUR-USD_Minute_2026-04-06_UTC.csv
eur-usd-dataset/fromhyperion/: parse.py  today.csv
eur-usd-dataset/merged_output/: annotated_candles.csv  pattern_sequence.txt  summary.txt  training_data.csv
eur-usd-dataset/output/: annotated_candles.csv  combined_sequence.txt  summary.txt  training_data.csv
fix-encoder/: Cargo.toml  README.md
fix-encoder/src/: encoder.rs  message.rs  sofhr.rs
hyperion/ev-atr/: Cargo.toml  integration-mandra-gate.py  use.md
hyperion/fix-encoder/benches/: fix_bench.rs
hyperion/fix-encoder/src/: lib.rs
hyperion/rpd_executor/: Cargo.toml  README.md
hyperion/rpd_executor/src/: engine.rs  main.rs  pipeline.rs
hyperion/rpd_net/: README.md  integration.rs
hyperion/rpd_net/src/: executor.rs  socket.rs  timestamp.rs
hyperion/schur/: Cargo.toml
hyperion/schur_engine/src/: adelic.rs  io_uring.rs  lib.rs  simplex.rs
ipda-adelic/: README.md  SOS-27-X_Sentinel.py  conversation.md
ipda-adelic/docker/: docker-compose.yml
ipda-adelic/scripts/: start_sentinel.sh
ipda-adelic/src/math_core/: adelic_tube.py  koopman_operator.py  readme.md
ipda-adelic/src/orchestrator/: readme.md  sos27x_sentinel.py
ipda-backend/: Cargo.toml
ipda-backend/api/: main.py
ipda-backend/core/: engine.py
ipda-backend/src/: lib.rs
magnet-market/: README.md
magnet-market/python/: main.py  requirements.txt
magnet-market/rust/: magnet-marker-rust.md
multi-signal-rust/: Cargo.toml  README.md
multi-signal-rust/src/: lib.rs
pine-scripts/: 5.txt  EV weight  STCO-EMA  STOC-MTF  STOC-RSI  STOC-STRAT  STOC-UCS  STOC-ZONES  STOCH3  STOCHASTIC-KAI  pro_scalper.txt  rpd-aoms.txt
pine-scripts/python/: ALMA-EMA-RSI.py  ALMA-adaptive.jax  ALMA-adaptive.py  ALMA-ribbons.py  alma.js  aoms-kernel.py  bullish-bearish.py  luxalgo  mtf.py  pro-scalper.py  rsi-multi.js  rsi-multi.py  rsi.py  super-stochastic.py  swing-trend-signal.py  z-core-oscillator.py
pine-scripts/tradingview/: IB-volume-deficit  supply-demand
position-sizing-rs/: Cargo.toml  position_sizing.rs
position-sizing-rs/src/: lib.rs
qsh-42/: readme.md
rpd_executor/: Cargo.toml  README.md
rpd_net/: Cargo.toml
rpd_net/src/: uring.rs  zero_copy.rs
schur/: README.md
schur/benches/: schur_bench.rs
schur/schur_engine/: Cargo.toml
schur/schur_engine/src/: schur.rs
scripts/: ipda-adelic-setup.sh  rpd_net-setup.sh
solid/ev-atr/: EV-ATR-Confluence.py  tune.md
solid/schur/: num-example.md
standalone-strategies/: 3d-ipda-viewer.py  ipda-3d.py  ipda_3d_phase1.py  position_sizing_library.py
(+31 files in other folders)
