[project]
name = "aegis-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

# Tool configurations managed by UV
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
