// ------------------------------------------------------------
// Cargo.toml
// ------------------------------------------------------------
// [package]
// name = "schur_routing"
// version = "0.1.0"
// edition = "2021"
//
// [dependencies]
// nalgebra = "0.32"
// rand = "0.8"
// # Uncomment the next line if you want a true p‑adic norm
// # padic = "0.2"
// ------------------------------------------------------------

use nalgebra::{DMatrix, DVector, Scalar, RealField, Norm};
use std::f64;

/// ---------------------------------------------------------------------------
/// Venue description (unchanged)
/// ---------------------------------------------------------------------------
#[derive(Debug, Clone)]
struct Venue {
    gamma: f64, // liquidity coefficient γᵢ
    delta: f64, // convexity δᵢ ∈ [1,2]
}

/// Slippage at venue i for a notional q :  sᵢ(q) = γᵢ·q^{δᵢ}
fn slippage(venue: &Venue, q: f64) -> f64 {
    venue.gamma * q.powf(venue.delta)
}

/// Build instantaneous cost matrix C (same as before)
///   C_{ij} = s_i(Q·w_i) + s_j(Q·w_j) + ρ_{ij}·Q
///   ρ_{ij} = exp(−λ_dist·d_{ij})
fn build_cost_matrix(
    Q: f64,
    w: &DVector<f64>,
    venues: &[Venue],
    dist: &DMatrix<f64>,
    lambda_dist: f64,
) -> DMatrix<f64> {
    let m = venues.len();
    let mut C = DMatrix::zeros(m, m);

    // s_i = slippage_i(Q·w_i)
    let s: Vec<f64> = venues        .iter()
        .zip(w.iter())
        .map(|(v, wi)| slippage(v, Q * wi))
        .collect();

    for i in 0..m {
        for j in 0..m {
            let rho = (-lambda_dist * dist[(i, j)]).exp();
            C[(i, j)] = s[i] + s[j] + rho * Q;
        }
    }
    C
}

/// Symmetrise + tiny diagonal for numerical stability
///   C̃ = 2C + Cᵀ + εI   (ε = 1e‑6)
fn symmetrize(C: &DMatrix<f64>) -> DMatrix<f64> {
    let eps = 1e-6;
    let m = C.nrows();
    let mut Ct = C.transpose();
    let mut Ctilde = C * 2.0 + &Ct;
    for i in 0..m {
        Ctilde[(i, i)] += eps;
    }
    Ctilde
}

/// Projection onto the probability simplex Δ^{m‑1}
///   w = max(v − τ·1, 0)  with τ chosen so Σ w_i = 1fn simplex_projection(v: &DVector<f64>) -> DVector<f64> {
    let mut u = v.clone();
    u.as_mut_slice().sort_by(|a, b| b.partial_cmp(a).unwrap()); // descending

    let mut cssv = 0.0;
    let mut rho = 0usize;
    for (i, &val) in u.iter().enumerate() {
        cssv += val;
        let t = (cssv - 1.0) / (i as f64 + 1.0);
        if val > t {
            rho = i + 1;
        }
    }

    let tau = (u.iter().take(rho).sum::<f64>() - 1.0) / rho as f64;
    v.map(|x| if x - tau > 0.0 { x - tau } else { 0.0 })
}

/// ---------------------------------------------------------------------------
/// Adelic‑tube indicator
/// ---------------------------------------------------------------------------
/// Simple proxy (replace with genuine p‑adic norm if desired)
fn adelic_tube_indicator_simple(
    w: &DVector<f64>,
    lambdas: &DVector<f64>,
    rho_mat: &DMatrix<f64>,
) -> f64 {
    // Use the first few primes as a stand‑in for p‑adic places
    let primes = [2u64, 3, 5, 7, 11];
    let m = w.len();
    for i in 0..m {
        let prod: f64 = primes
            .iter()
            .map(|&p| (w[i] * lambdas[i]).abs().powf(1.0 / p as f64))
            .product();
        // Approximate |ρ|_p by the average off‑diagonal entry
        let rho_avg = (rho_mat.sum() - rho_mat.trace())
            / ((m * (m - 1)) as f64);
        if prod >= rho_avg {
            return 0.0; // violates tube constraint
        }
    }
    1.0
}

/// Optional: genuine p‑adic norm using the `padic` crate
/// (Uncomment the `use padic::Padic;` line and the body below if you add the dependency)
/*
use padic::Padic;

fn adelic_tube_indicator_padic(
    w: &DVector<f64>,
    lambdas: &DVector<f64>,
    rho_mat: &DMatrix<f64>,
    prime: u64,
) -> f64 {
    let m = w.len();
    for i in 0..m {
        let x = Padic::new(prime, (w[i] * lambdas[i]) as f64);
        let norm_p = x.norm(); // |·|_p
        // Use the same average off‑diagonal ρ as threshold
        let rho_avg = (rho_mat.sum() - rho_mat.trace())
            / ((m * (m - 1)) as f64);
        if norm_p >= rho_avg {
            return 0.0;
        }
    }
    1.0
}
*/

/// ATR‑10 placeholder – replace with a real calculation from market data
fn atr10(_: f64) -> f64 {
    0.02 // dummy constant
}

/// Blow‑up threshold: λ_blow‑up = ATR10 · κ_schur
fn blowup_threshold(atr10: f64, kappa_schur: f64) -> f64 {
    atr10 * kappa_schur
}

/// ---------------------------------------------------------------------------
/// Core Schur‑routing step (now works for non‑symmetric C)
/// ---------------------------------------------------------------------------
fn schur_routing(
    Q: f64,
    w_prev: &DVector<f64>,
    venues: &[Venue],
    dist: &DMatrix<f64>,
    lambda_dist: f64,
    kappa_schur: f64,
    use_real_schur: bool, // set true for non‑symmetric C
) -> DVector<f64> {
    // 1️⃣ Build instantaneous cost matrix from previous weights
    let C = build_cost_matrix(Q, w_prev, venues, dist, lambda_dist);

    // 2️⃣ Symmetrise only if we are going to use the ordinary eigen path;
    //    otherwise we feed the *raw* (possibly non‑symmetric) matrix to Schur.
    let mat_for_schur = if use_real_schur { C } else { symmetrize(&C) };

    // 3️⃣ Real Schur (quasi‑triangular) decomposition:
    //        A = Q · T · Qᵀ   with T block‑upper‑triangular (1×1 or 2×2 blocks)
    let schur = nalgebra::linalg::Schur::new(mat_for_schur.clone(), true, true)
        .expect("Schur decomposition failed");

    let Qmat = schur.unitary_vectors(); // orthogonal/unitary matrix
    let Tmat = schur.triangular_factor(); // quasi‑triangular T

    // 4️⃣ Extract the diagonal of T (real parts of eigenvalues)
    //    For a 2×2 block the eigenvalues are the complex conjugate pair;
    //    we take the real part (they are equal).
    let mut diag_real = DVector::zeros(Tmat.nrows());
    let mut i = 0;
    while i < Tmat.nrows() {
        if i + 1 < Tmat.nrows() && Tmat[(i + 1, i)] != 0.0 {
            // 2×2 block [[a, b], [c, d]] → eigenvalues = (a+d)/2 ± i·sqrt(...)
            let a = Tmat[(i, i)];
            let d = Tmat[(i + 1, i + 1)];
            let real_part = (a + d) * 0.5;
            diag_real[i] = real_part;
            diag_real[i + 1] = real_part;
            i += 2;
        } else {
            // 1×1 block → eigenvalue is the entry itself
            diag_real[i] = Tmat[(i, i)];
            i += 1;
        }
    }

    // 5️⃣ Pick index of smallest real part (analogue of λ_min)
    let k_star = diag_real
        .iter()
        .enumerate()
        .min_by(|(_, a), (_, b)| a.partial_cmp(b).unwrap())
        .map(|(idx, _)| idx)
        .unwrap();

    let v_opt = Qmat.column(k_star); // already unit‑length

    // 6️⃣ Project onto simplex → feasible weights
    let w_hat = simplex_projection(&v_opt);

    // 7️⃣ Adelic‑tube indicator (simple version shown; replace with p‑adic if desired)
    //    Build ρ matrix from distances
    let mut rho_mat = DMatrix::zeros(venues.len(), venues.len());
    for i in 0..venues.len() {
        for j in 0..venues.len() {
            rho_mat[(i, j)] = (-lambda_dist * dist[(i, j)]).exp();
        }
    }
    let adelic_ind = adelic_tube_indicator_simple(&w_hat, &diag_real, &rho_mat);
    // let adelic_ind = adelic_tube_indicator_padic(&w_hat, &diag_real, &rho_mat, 2);

    // 8️⃣ Blow‑up filter using ATR‑10 threshold
    let lambda_min = diag_real.iter().cloned().fold(f64::INFINITY, |a, b| a.min(b));
    let lambda_blow_up = blowup_threshold(atr10(Q), kappa_schur);
    let blowup_ind = if lambda_min < lambda_blow_up { 1.0 } else { 0.0 };

    // 9️⃣ Final weight (scalar indicators multiply the vector)
    let mut w_star = w_hat * adelic_ind * blowup_ind;

    // If the indicators killed the solution, fall back to uniform routing
    if w_star.sum() < 1e-12 {
        let uniform = DVector::from_element(venues.len(), 1.0 / venues.len() as f64);
        w_star = uniform;
    }
    w_star}

/// ---------------------------------------------------------------------------
/// Demo / driver loop with convergence criterion
/// ---------------------------------------------------------------------------
fn main() {
    // ------------------- Parameters -----------------------------------------
    let Q_t = 1_000_000.0; // notional to execute
    let m = 3;             // number of venues

    let venues = vec![
        Venue { gamma: 0.10, delta: 1.5 },
        Venue { gamma: 0.08, delta: 1.6 },
        Venue { gamma: 0.12, delta: 1.4 },
    ];

    // Distance matrix (latency / correlation / shared flow)
    let dist = DMatrix::from_vec(
        m,
        m,
        vec![            0.0, 0.3, 0.5,
            0.3, 0.0, 0.2,
            0.5, 0.2, 0.0,
        ],
    );
    let lambda_dist = 2.0; // decay for correlated impact
    let kappa_schur = 0.5; // Schur‑specific constant

    // Start from an uniform guess
    let mut w = DVector::from_element(m, 1.0 / m as f64);

    // Convergence settings
    let tol = 1e-8;
    let max_iter = 50;
    let mut iter = 0;

    // ----------------------------------------------------------------------
    // Set `use_real_schur = true` if you expect C to be non‑symmetric    // (e.g., when you add venue‑specific fees that break symmetry).
    // ----------------------------------------------------------------------
    let use_real_schur = false; // toggle to see the difference

    loop {
        let w_new = schur_routing(
            Q_t,
            &w,
            &venues,
            &dist,
            lambda_dist,
            kappa_schur,
            use_real_schur,
        );

        let diff = (w_new - w).norm(); // ‖w_t − w_{t‑1}‖₂
        w = w_new;

        println!(
            "Iter {}: w = [{:.6}, {:.6}, {:.6}]  ‖Δw‖ = {:.2e}",
            iter,
            w[0],
            w[1],
            w[2],
            diff
        );

        iter += 1;
        if diff < tol || iter >= max_iter {
            break;
        }
    }

    println!("\nFinal routing weights (sum = {:.6}): {:?}", w.sum(), w);
}
