[package]
name = "schur_engine"
version = "0.1.0"
edition = "2021"
authors = ["RPD Systems"]
rust-version = "1.77"

[dependencies]
# Linear algebra
nalgebra = { version = "0.33", features = ["std", "serde"] }
faer = { version = "0.18", features = ["nightly"] }

# SIMD
packed_simd_2 = "0.3"
wide = "0.7"

# Lock-free structures
crossbeam = "0.8"
crossbeam-queue = "0.3"

# Async I/O
tokio = { version = "1.36", features = ["rt-multi-thread", "net", "time"] }

# io_uring (Linux 5.15+)
io-uring = "0.6"
tokio-uring = "0.5"

# Memory
memmap2 = "0.9"
cache-padded = "1.3"

# Math
num-traits = "0.2"
num-integer = "0.1"

# Tracing
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
target-cpu = "native"

[profile.bench]
inherits = "release"
debug = true
